Update content content/Portfolio/Social Network Service/일정 및 방법론의 결정.md

--- a/content/Portfolio/Social Network Service/일정 및 방법론의 결정.md
+++ b/content/Portfolio/Social Network Service/일정 및 방법론의 결정.md
@@ -21,6 +21,7 @@ tags:
 - 기능정의서 > 요구사항 명세서 > ERD > WBS > 기능 개발
 > 총 프로젝트 기간은 3달로 확정하였다. <br>
 > 3달이라는 시간과 선택한 WaterFall 방법론에 맞춰 산출물을 확정하였으며 Mock-up은 Instagram을 생각하며 생략하였다.
+
 <br>
 
 ## Git Branch 전략
@@ -33,3 +34,77 @@ tags:
 > 
 > **feature** <br>
 > - 기능 단위 개발 Branch
+
+<br>
+
+## PR 규칙
+- develop  : PR 2인 / 비정기
+- main  : PR 전원 / 매 주 1회
+>각자 다른 시간에 상황에 맞게 개발을 진행하고 총 기간에는 문제가 되지 않도록 주 1회 온라인으로 진행 상황을 공유하기로 했다.<br>
+>서로가 코드를 리뷰하며 개발을 진행하되 충돌의 위험을 줄이기위해서 이와같은 규칙을 갖게 되었다.
+
+<br>
+
+## Project 구조 및 Naming
+~~~
+.
+├── README.md
+├── backend
+│   ├── build.gradle
+│   ├── gradle
+│   ├── gradlew
+│   ├── gradlew.bat
+│   ├── settings.gradle
+│   └── src
+│       ├── main
+│       │   ├── java
+│       │   │   └── com
+│       │   │       └── jdd
+│       │   │           └── sns
+│       │   │               ├── SnsApplication.java
+│       │   │               ├── follow
+│       │   │               │   ├── FollowController.java
+│       │   │               │   ├── dto
+│       │   │               │   │   └── FollowDto.java
+│       │   │               │   ├── repository
+│       │   │               │   │   └── FollowRepository.java
+│       │   │               │   └── service
+│       │   │               │       └── FollowService.java
+│       │   │               └── global
+│       │   │                   ├── config
+│       │   │                   ├── domain
+│       │   │                   │   ├── BlockFollow.java
+│       │   │                   │   ├── Follow.java
+│       │   │                   │   ├── Image.java
+│       │   │                   │   ├── Post.java
+│       │   │                   │   └── User.java
+│       │   │                   ├── enums
+│       │   │                   │   ├── FollowsStatus.java
+│       │   │                   │   └── PostsStatus.java
+│       │   │                   └── util
+│       │   └── resources
+│       │       ├── application.yaml
+│       │       ├── static
+│       │       └── templates
+│       └── test
+│           └── java
+│               └── com
+│                   └── jdd
+│                       └── sns
+│                           └── SnsApplicationTests.java
+└── frontend
+~~~
+> 처음 [[Cooking Learn]] 프로젝트를 회고했을 때 가장 아쉬웠던 점이 불특정한 다수가 모여 프로젝트를 진행하면 서로 각자의 코딩 Style이 달라 결과물을 봤을 때 일관성이 없었다는 것이다.<br>
+> 내 스스로 당연하다고 생각되는 부분도 팀원들과 의견을 나누고 Project 구조 및 Naming 규칙에 대해 결정하였다.
+### Project 구조
+#### backend
+1. service 단위로 com.jdd.sns 하위에 package를 생성하여 기능을 구현
+2. global에는 공통된 로직만 구현
+3. global.domain과 global.enums package는 Entity에 대한 package이며, 로직에 필요한 컬럼이 생길 경우 각 service package의 dto를 통해 구현
+#### frontend
+1. service 단위로 pages 하위에 directory를 생성하여 화면을 구현
+
+### Naming
+1. CamelCase로 통일
+2. Method는 "getFollowList", "getBlockFollow" 와 같은 형태로 작성
+3. variable는 "followList", "blockFollow" 와 같은 형태로 작성
